--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-r-cran-biostrings (2.26.3-1) testing; urgency=low
+r-bioc-biostrings (2.26.3-1) testing; urgency=low
 
   * Re-packaging by The Genome Institute
 
